Minor additions of text

--- a/Robotics01S.html
+++ b/Robotics01S.html
@@ -717,7 +717,7 @@ If you type it exactly as shown, your robot should move forward 1cm. (even capit
   </div>
   <div class="subtitle">Mine sweeper</div>
   <div class="box">
-    <div class="text"><div class="instructsdiv"><p class="instructspara">Your next challenge is to create a minesweeping robot.  You may be using an activity mat like the one shown, or your teacher might create an arena using other objects or markings.  If you're using the mat shown here, we're really just interested in the large circular dashed line.  Your robot must start outside of this line and collect the 10 'mines' that are randomly scattered inside this line.</p>
+    <div class="text"><div class="instructsdiv"><p class="instructspara">Your next challenge is to create a minesweeping robot.  You may be using an activity mat like the one shown, or your teacher might create an arena using other objects or markings.  If you're using the mat shown here, we're really just interested in the large circular dashed line.  Your robot must start outside of this line and collect the 10 'mines' that are randomly scattered inside this line.  The 'mines' are small objects that get picked up by a magnet and can include things like coins, stell washers, or small nuts and bolts.</p>
 <p class="instructspara">Your challenge is to collect as many mines in the shortest possible time.  Read the next couple of steps to find out the rules and some tips ...</p>
 </div>
 </div>
