--- a/Robotics01.html
+++ b/Robotics01.html
@@ -290,6 +290,10 @@
   <div class="box">
     <div class="heading">Entering the address</div>
     <div class="text"><div class="instructsdiv"><p class="instructspara">Enter the bold code from the label in the 'Address' box and then click the 'Network' button.</p>
+<p class="instructspara"><strong>Note: Using the https URL will only provide the option of a serial connection. Use the https link if you are connecting to your robot using wifi.</strong></p>
+<p class="instructspara">Here are the two versions of the link:</p>
+<p class="instructspara"><a target="_blank" href="https://code.inventblocks.com/ui/">https://code.inventblocks.com/ui/</a></p>
+<p class="instructspara"><a target="_blank" href="http://code.inventblocks.com/ui/">http://code.inventblocks.com/ui/</a></p>
 </div>
 </div>
     <div style="position:relative;">
@@ -337,6 +341,7 @@
   <div class="box">
     <div class="heading">Connecting</div>
     <div class="text"><div class="instructsdiv"><p class="instructspara">Go to the website <a target="_blank" href="http://code.inventblocks.com/ui/">http://code.inventblocks.com/ui/</a> and click on the WiFi icon shown.</p>
+<p class="instructspara"><strong>Note: If you use https in the URL you will only have the option of a serial connection to your robot.</strong></p>
 </div>
 </div>
     <div style="position:relative;">
